fix problem with modal z-index

--- a/src/app/post-card/post-card.component.css
+++ b/src/app/post-card/post-card.component.css
@@ -272,3 +272,7 @@
 .sub-reply:not(:first-child) {
     margin-top: -9px;
 }
+
+.modal.is-active {
+    z-index: 9999;
+}
